appId: com.omre.app.posh
---
- launchApp:
    clearState: false
- assertVisible: "For You"
- tapOn: "View all"
- tapOn: "News"
- assertVisible: "Following"
- assertVisible: "My Feed"
- assertVisible: "Live Coverage"
- assertNotVisible: "Welcome back"
- tapOn: "My Feed"
- assertVisible: "My Feed"
- scroll
- assertVisible: "SCIENCE"
- scroll
- swipe:
    direction: DOWN
- tapOn: "Following"
- assertVisible: "Following"
- tapOn: "Live Coverage"
- assertVisible: "Live Coverage"
- tapOn: "My Feed"
- assertVisible: "My Feed"
